Added statistics module
Given Licenses Statistics

--- a/GAIManagment/GAIManagment/ModuleLicenses/Presentation/Pages/LicensesPage.xaml
+++ b/GAIManagment/GAIManagment/ModuleLicenses/Presentation/Pages/LicensesPage.xaml
@@ -70,6 +70,11 @@
                 x:Name="btnHistory"
                 Content="История статусов"
                 Click="btnHistory_Click"/>
+
+            <Button 
+                x:Name="btnPrint"
+                Content="Распечатать"
+                Click="btnPrint_Click"/>
         </StackPanel>
     </Grid>
 </Page>
