--- a/GAIManagment/GAIManagment/ModuleAuth/Presentation/Pages/AuthPage.xaml
+++ b/GAIManagment/GAIManagment/ModuleAuth/Presentation/Pages/AuthPage.xaml
@@ -13,7 +13,7 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
             <StackPanel>
-                <TextBlock Text="Email"/>
+                <TextBlock Text="Логин"/>
                 <TextBox Width="250"/>
             </StackPanel>
 
