--- a/GAIManagment/GAIManagment/ModuleLicenses/Presentation/Windows/ChangeStatusWindow.xaml
+++ b/GAIManagment/GAIManagment/ModuleLicenses/Presentation/Windows/ChangeStatusWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="Смена статуса" Height="400" Width="400"
         ResizeMode="NoResize"
-        Loaded="Window_Loaded">
+        Loaded="Window_Loaded"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
