--- a/GAIManagment/GAIManagment/ModuleLicenses/Presentation/Windows/DriversDialog.xaml
+++ b/GAIManagment/GAIManagment/ModuleLicenses/Presentation/Windows/DriversDialog.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="DriversDialog" Height="300" Width="350"
         ResizeMode="NoResize"
-        Loaded="Window_Loaded">
+        Loaded="Window_Loaded"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
